files as Javascript and css correctly created

--- a/index.html
+++ b/index.html
@@ -2,11 +2,21 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="styles.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Software Developers Info</title>
 </head>
 <body>
-
+<nav class="Menu">
+  <ul>
+    <li <a href="#">Info</a></li>
+    <li <a href="#">Whatsapp</a></li>
+    <li <a href="#">Telegram</a></li>
+    <li <a href="#">Discord</a></li>
+    <li <a href="#">Staff team</a></li>
+  </ul>
+</nav>
+<script src="http://localhost:35729/livereload.js" charset="utf-8"></script>
 </body>
 </html>
