New changes in the HTML and CSS source.

--- a/index.html
+++ b/index.html
@@ -3,19 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Software Developers Info</title>
 </head>
 <body>
-<nav class="Menu">
-  <ul>
-    <li <a href="#">Info</a></li>
-    <li <a href="#">Whatsapp</a></li>
-    <li <a href="#">Telegram</a></li>
-    <li <a href="#">Discord</a></li>
-    <li <a href="#">Staff team</a></li>
-  </ul>
+<nav class="navBar">
+  <main>
+    <h1>Software Developers</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sed sollicitudin lorem. Maecenas malesuada libero a vestibulum ultricies. Ut scelerisque magna ligula, non vulputate nulla viverra a. Vestibulum bibendum in elit a accumsan. Morbi a neque vulputate, sollicitudin lorem sit amet, dapibus enim. Fusce eget tortor nisl. Cras vitae augue sollicitudin urna imperdiet tincidunt.
+
+Ut blandit est quis scelerisque auctor. Nullam suscipit ante sit amet tristique ultricies. Maecenas maximus nisi ex, quis ullamcorper magna molestie ut. Nunc hendrerit dui eget elit hendrerit, in feugiat sapien vulputate. Maecenas quis odio malesuada dolor bibendum vehicula. Donec ipsum neque, porttitor eget metus sit amet, ullamcorper egestas turpis. Vestibulum mi metus, semper in interdum et, tristique a eros. Ut mollis purus eu magna porta, sit amet suscipit metus mollis. Nullam tincidunt ut est eu placerat. Suspendisse potenti. Pellentesque at blandit purus. Duis lacinia non erat eu vestibulum. Praesent iaculis fermentum est, quis porta quam. Mauris fringilla, lectus sit amet dignissim volutpat, justo turpis maximus enim, ut pretium mauris sem dictum risus. Vivamus dignissim congue dictum.
+
+Maecenas et tincidunt elit. Sed nunc libero, ullamcorper ut massa non, pretium aliquet dui. Aenean at porta dolor. Praesent bibendum ligula risus, et maximus tortor volutpat ac. Nunc pretium venenatis mattis. Nullam sit amet rhoncus metus, non viverra tortor. Morbi sed tincidunt nisi. Curabitur non tellus sed leo posuere vehicula. Etiam pellentesque ac justo ac faucibus. Sed congue lacus vel justo hendrerit viverra. Nullam fermentum leo eget magna lacinia, eu pharetra ipsum eleifend. Nunc quis felis tellus.
+
+Vestibulum fermentum vestibulum libero vitae malesuada. Pellentesque id blandit felis. Etiam viverra a urna ac posuere. Nunc sagittis, augue a varius placerat, metus orci molestie erat, id accumsan urna nisi feugiat arcu. Nunc id lectus mollis, bibendum risus eu, tempus risus. Sed dolor turpis, eleifend vel nisl at, volutpat tempor dolor. Mauris id diam interdum, fermentum mi in, tempus ligula. Pellentesque convallis magna accumsan, luctus sapien a, sodales augue. Donec tincidunt nibh ut nisi dictum tempor. Aliquam quis pretium nisi. Praesent sollicitudin efficitur nisl, quis posuere sapien feugiat a. Vestibulum vulputate purus id felis consequat, in pellentesque enim mattis.
+
+Etiam molestie ut ipsum id suscipit. Quisque lobortis eros sed dui fermentum, scelerisque lobortis magna dignissim. Duis magna ipsum, laoreet at velit quis, aliquet aliquam dolor. Cras dictum suscipit diam sit amet placerat. Cras imperdiet mauris quis bibendum accumsan. Donec vel felis tellus. Morbi finibus magna urna, id tincidunt ipsum facilisis efficitur. Etiam maximus volutpat molestie.</p>
+  </main>
 </nav>
 <script src="http://localhost:35729/livereload.js" charset="utf-8"></script>
 </body>
