All page changed of color and first icon deleted

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 <ul>
   <li class="nav-item">
     <a href="#" class="nav-link">
-      <span class="link-text"><i class="fas fa-torii-gate"></i></span>
+      <span class="link-text"></span>
     </a>
   </li>
 </ul>
 </nav>
 <main>
-    <h1>Software Developers</h1>
-
+    <div class="textos">
+      <h1>Software Developers</h1>
     <p>
       I'm baby kale chips affogato ennui lumbersexual, williamsburg paleo quinoa
       iceland normcore tumeric. Kitsch coloring book retro, seitan schlitz
@@ -119,6 +119,7 @@
       street art normcore, edison bulb farm-to-table pour-over taxidermy
       brooklyn.
     </p>
+    </div>
   </main>
 <script src="http://localhost:35729/livereload.js" charset="utf-8"></script>
 </body>
