--- a/index.html
+++ b/index.html
@@ -38,17 +38,21 @@
         <a href="#" class="nav-link">
           <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="torii-gate" class="svg-inline--fa fa-torii-gate fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
             <g class="fa-group">
-              <path fill="currentColor" d="M376.45 32h-240.9A303.17 303.17 0 0 1 0 0v96c0 17.67 14.33 32 32 32h32v64H16c-8.84 0-16 7.16-16 16v32c0 8.84 7.16 16 16 16h48v240c0 8.84 7.16 16 16 16h32c8.84 0 16-7.16 16-16V256h256v240c0 8.84 7.16 16 16 16h32c8.84 0 16-7.16 16-16V256h48c8.84 0 16-7.16 16-16v-32c0-8.84-7.16-16-16-16h-48v-64h32c17.67 0 32-14.33 32-32V0a303.17 303.17 0 0 1-135.55 32zM128 128h96v64h-96v-64zm256 64h-96v-64h96v64z" class="fa-secondary"></path>
+              <path fill="currentColor" d="M376.45 32h-240.9A303.17 303.17 0 0 1 0 0v96c0 17.67 14.33 32 32 32h32v64H16c-8.84 0-16 7.16-16 16v32c0 8.84 7.16 16 16 16h48v240c0 8.84 7.16 16 16 16h32c8.84 0 16-7.16 16-16V256h256v240c0 8.84 7.16 16 16 16h32c8.84 0 16-7.16 16-16V256h48c8.84 0 16-7.16 16-16v-32c0-8.84-7.16-16-16-16h-48v-64h32c17.67 0 32-14.33 32-32V0a303.17 303.17 0 0 1-135.55 32zM128 128h96v64h-96v-64zm256 64h-96v-64h96v64z" class="fa-secondary"
+              class="tabLink"  onclick="openTab(event, 'inicioTab')"
+              ></path>
             </g>
           </svg>
-          <span class="link-text">Info</span>
+          <span class="link-text">Inicio</span>
         </a>
       </li>
       <li class="nav-item">
         <a href="#" class="nav-link">
           <svg aria-hidden="true" focusable="false" data-prefix="fab" data-icon="whatsapp" class="svg-inline--fa fa-whatsapp fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
             <g class="fa-group">
-              <path fill="currentColor" d="M380.9 97.1C339 55.1 283.2 32 223.9 32c-122.4 0-222 99.6-222 222 0 39.1 10.2 77.3 29.6 111L0 480l117.7-30.9c32.4 17.7 68.9 27 106.1 27h.1c122.3 0 224.1-99.6 224.1-222 0-59.3-25.2-115-67.1-157zm-157 341.6c-33.2 0-65.7-8.9-94-25.7l-6.7-4-69.8 18.3L72 359.2l-4.4-7c-18.5-29.4-28.2-63.3-28.2-98.2 0-101.7 82.8-184.5 184.6-184.5 49.3 0 95.6 19.2 130.4 54.1 34.8 34.9 56.2 81.2 56.1 130.5 0 101.8-84.9 184.6-186.6 184.6zm101.2-138.2c-5.5-2.8-32.8-16.2-37.9-18-5.1-1.9-8.8-2.8-12.5 2.8-3.7 5.6-14.3 18-17.6 21.8-3.2 3.7-6.5 4.2-12 1.4-32.6-16.3-54-29.1-75.5-66-5.7-9.8 5.7-9.1 16.3-30.3 1.8-3.7.9-6.9-.5-9.7-1.4-2.8-12.5-30.1-17.1-41.2-4.5-10.8-9.1-9.3-12.5-9.5-3.2-.2-6.9-.2-10.6-.2-3.7 0-9.7 1.4-14.8 6.9-5.1 5.6-19.4 19-19.4 46.3 0 27.3 19.9 53.7 22.6 57.4 2.8 3.7 39.1 59.7 94.8 83.8 35.2 15.2 49 16.5 66.6 13.9 10.7-1.6 32.8-13.4 37.4-26.4 4.6-13 4.6-24.1 3.2-26.4-1.3-2.5-5-3.9-10.5-6.6z" class="fa-third"></path>
+              <path fill="currentColor" d="M380.9 97.1C339 55.1 283.2 32 223.9 32c-122.4 0-222 99.6-222 222 0 39.1 10.2 77.3 29.6 111L0 480l117.7-30.9c32.4 17.7 68.9 27 106.1 27h.1c122.3 0 224.1-99.6 224.1-222 0-59.3-25.2-115-67.1-157zm-157 341.6c-33.2 0-65.7-8.9-94-25.7l-6.7-4-69.8 18.3L72 359.2l-4.4-7c-18.5-29.4-28.2-63.3-28.2-98.2 0-101.7 82.8-184.5 184.6-184.5 49.3 0 95.6 19.2 130.4 54.1 34.8 34.9 56.2 81.2 56.1 130.5 0 101.8-84.9 184.6-186.6 184.6zm101.2-138.2c-5.5-2.8-32.8-16.2-37.9-18-5.1-1.9-8.8-2.8-12.5 2.8-3.7 5.6-14.3 18-17.6 21.8-3.2 3.7-6.5 4.2-12 1.4-32.6-16.3-54-29.1-75.5-66-5.7-9.8 5.7-9.1 16.3-30.3 1.8-3.7.9-6.9-.5-9.7-1.4-2.8-12.5-30.1-17.1-41.2-4.5-10.8-9.1-9.3-12.5-9.5-3.2-.2-6.9-.2-10.6-.2-3.7 0-9.7 1.4-14.8 6.9-5.1 5.6-19.4 19-19.4 46.3 0 27.3 19.9 53.7 22.6 57.4 2.8 3.7 39.1 59.7 94.8 83.8 35.2 15.2 49 16.5 66.6 13.9 10.7-1.6 32.8-13.4 37.4-26.4 4.6-13 4.6-24.1 3.2-26.4-1.3-2.5-5-3.9-10.5-6.6z" class="fa-third"
+              class="tabLink"  onclick="openTab(event, 'whatsappTab')"
+              ></path>
             </g>
           </svg>
           <span class="link-text">Whatsapp</span>
@@ -58,7 +62,9 @@
         <a href="#" class="nav-link">
           <svg aria-hidden="true" focusable="false" data-prefix="fab" data-icon="telegram" class="svg-inline--fa fa-telegram fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512">
             <g class="fa-group">
-              <path fill="currentColor" d="M248 8C111 8 0 119 0 256s111 248 248 248 248-111 248-248S385 8 248 8zm121.8 169.9l-40.7 191.8c-3 13.6-11.1 16.9-22.4 10.5l-62-45.7-29.9 28.8c-3.3 3.3-6.1 6.1-12.5 6.1l4.4-63.1 114.9-103.8c5-4.4-1.1-6.9-7.7-2.5l-142 89.4-61.2-19.1c-13.3-4.2-13.6-13.3 2.8-19.7l239.1-92.2c11.1-4 20.8 2.7 17.2 19.5z" class="fa-fourth"></path>
+              <path fill="currentColor" d="M248 8C111 8 0 119 0 256s111 248 248 248 248-111 248-248S385 8 248 8zm121.8 169.9l-40.7 191.8c-3 13.6-11.1 16.9-22.4 10.5l-62-45.7-29.9 28.8c-3.3 3.3-6.1 6.1-12.5 6.1l4.4-63.1 114.9-103.8c5-4.4-1.1-6.9-7.7-2.5l-142 89.4-61.2-19.1c-13.3-4.2-13.6-13.3 2.8-19.7l239.1-92.2c11.1-4 20.8 2.7 17.2 19.5z" class="fa-fourth"
+              class="tabLink"  onclick="openTab(event, 'telegramTab')"
+              ></path>
             </g>
           </svg>
           <span class="link-text">Telegram</span>
@@ -69,7 +75,7 @@
           <svg aria-hidden="true" focusable="false" data-prefix="fab" data-icon="discord" class="svg-inline--fa fa-discord fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
             <g class="fa-group">
               <path fill="currentColor" d="M297.216 243.2c0 15.616-11.52 28.416-26.112 28.416-14.336 0-26.112-12.8-26.112-28.416s11.52-28.416 26.112-28.416c14.592 0 26.112 12.8 26.112 28.416zm-119.552-28.416c-14.592 0-26.112 12.8-26.112 28.416s11.776 28.416 26.112 28.416c14.592 0 26.112-12.8 26.112-28.416.256-15.616-11.52-28.416-26.112-28.416zM448 52.736V512c-64.494-56.994-43.868-38.128-118.784-107.776l13.568 47.36H52.48C23.552 451.584 0 428.032 0 398.848V52.736C0 23.552 23.552 0 52.48 0h343.04C424.448 0 448 23.552 448 52.736zm-72.96 242.688c0-82.432-36.864-149.248-36.864-149.248-36.864-27.648-71.936-26.88-71.936-26.88l-3.584 4.096c43.52 13.312 63.744 32.512 63.744 32.512-60.811-33.329-132.244-33.335-191.232-7.424-9.472 4.352-15.104 7.424-15.104 7.424s21.248-20.224 67.328-33.536l-2.56-3.072s-35.072-.768-71.936 26.88c0 0-36.864 66.816-36.864 149.248 0 0 21.504 37.12 78.08 38.912 0 0 9.472-11.52 17.152-21.248-32.512-9.728-44.8-30.208-44.8-30.208 3.766 2.636 9.976 6.053 10.496 6.4 43.21 24.198 104.588 32.126 159.744 8.96 8.96-3.328 18.944-8.192 29.44-15.104 0 0-12.8 20.992-46.336 30.464 7.68 9.728 16.896 20.736 16.896 20.736 56.576-1.792 78.336-38.912 78.336-38.912z"
-              class="fa-fifth"></path>
+              class="tabLink" class="fa-fifth" onclick="openTab(event, 'discordTab')"></path>
             </g>
           </svg>
           <span class="link-text">Discord</span>
@@ -79,7 +85,7 @@
         <a href="#" class="nav-link">
           <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="crown" class="svg-inline--fa fa-crown fa-w-20" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512">
             <g class="fa-group">
-              <path fill="currentColor" d="M528 448H112c-8.8 0-16 7.2-16 16v32c0 8.8 7.2 16 16 16h416c8.8 0 16-7.2 16-16v-32c0-8.8-7.2-16-16-16zm64-320c-26.5 0-48 21.5-48 48 0 7.1 1.6 13.7 4.4 19.8L476 239.2c-15.4 9.2-35.3 4-44.2-11.6L350.3 85C361 76.2 368 63 368 48c0-26.5-21.5-48-48-48s-48 21.5-48 48c0 15 7 28.2 17.7 37l-81.5 142.6c-8.9 15.6-28.9 20.8-44.2 11.6l-72.3-43.4c2.7-6 4.4-12.7 4.4-19.8 0-26.5-21.5-48-48-48S0 149.5 0 176s21.5 48 48 48c2.6 0 5.2-.4 7.7-.8L128 416h384l72.3-192.8c2.5.4 5.1.8 7.7.8 26.5 0 48-21.5 48-48s-21.5-48-48-48z" class="fa-sixth"></path>
+              <path fill="currentColor" d="M528 448H112c-8.8 0-16 7.2-16 16v32c0 8.8 7.2 16 16 16h416c8.8 0 16-7.2 16-16v-32c0-8.8-7.2-16-16-16zm64-320c-26.5 0-48 21.5-48 48 0 7.1 1.6 13.7 4.4 19.8L476 239.2c-15.4 9.2-35.3 4-44.2-11.6L350.3 85C361 76.2 368 63 368 48c0-26.5-21.5-48-48-48s-48 21.5-48 48c0 15 7 28.2 17.7 37l-81.5 142.6c-8.9 15.6-28.9 20.8-44.2 11.6l-72.3-43.4c2.7-6 4.4-12.7 4.4-19.8 0-26.5-21.5-48-48-48S0 149.5 0 176s21.5 48 48 48c2.6 0 5.2-.4 7.7-.8L128 416h384l72.3-192.8c2.5.4 5.1.8 7.7.8 26.5 0 48-21.5 48-48s-21.5-48-48-48z" class="fa-sixth" class="tabLink" onclick="openTab(event, 'staffTab')"></path>
             </g>
           </svg>
           <span class="link-text">Staff Team</span>
@@ -185,9 +191,8 @@
     </ul>
   </nav>
 
-  <main class="texts">
+  <main id="Inicio" class="tabContent">
     <h1>Software Developers</h1>
-
     <p>
       I'm baby kale chips affogato ennui lumbersexual, williamsburg paleo quinoa
       iceland normcore tumeric. Kitsch coloring book retro, seitan schlitz
@@ -195,95 +200,22 @@
       selfies normcore gluten-free snackwave. Seitan ramps drinking vinegar
       venmo keytar, humblebrag VHS post-ironic tacos godard pour-over.
     </p>
-    <p>
-      Sartorial kogi taxidermy, kickstarter synth yr irony ennui everyday carry
-      retro helvetica stumptown cloud bread squid echo park. Etsy cloud bread
-      sartorial quinoa tacos beard mumblecore shaman tumblr pop-up. Twee retro
-      fingerstache af helvetica pabst 8-bit leggings taiyaki portland ramps tbh
-      tumblr vinyl. Neutra humblebrag bushwick portland subway tile plaid, offal
-      scenester flexitarian cliche squid small batch palo santo. Palo santo meh
-      adaptogen +1 3 wolf moon, listicle brunch ethical fanny pack everyday
-      carry fam. Offal fingerstache taxidermy, man bun venmo PBR&amp;B helvetica
-      thundercats everyday carry tote bag artisan cray wolf jianbing.
-    </p>
-    <p>
-      Taxidermy thundercats whatever austin. VHS helvetica ethical, dreamcatcher
-      enamel pin YOLO shabby chic locavore man bun crucifix pabst chillwave
-      pop-up vegan. Air plant mlkshk ethical echo park tumeric, whatever
-      crucifix godard scenester locavore pork belly yuccie vape. +1 gochujang
-      put a bird on it, pork belly whatever selfies vaporware occupy banh mi
-      normcore VHS. Cornhole normcore hashtag tilde. Hell of yr try-hard DIY raw
-      denim banjo, enamel pin irony polaroid copper mug tofu. Dreamcatcher lomo
-      literally 90's before they sold out, 3 wolf moon banh mi seitan chambray
-      cliche offal tote bag occupy pug.
-    </p>
-    <p>
-      Post-ironic hot chicken salvia yr yuccie ugh cold-pressed keffiyeh franzen
-      viral taxidermy mustache slow-carb crucifix vape. Taiyaki yuccie hell of
-      tacos PBR&amp;B, kitsch meggings tbh truffaut kickstarter mixtape af kogi.
-      Fingerstache vegan tofu waistcoat gentrify cray. Drinking vinegar 3 wolf
-      moon health goth craft beer master cleanse. Letterpress health goth 8-bit
-      chillwave craft beer brooklyn. Chicharrones master cleanse 8-bit,
-      mumblecore copper mug messenger bag poutine lomo kale chips flannel. Twee
-      hoodie gastropub bitters tousled pork belly enamel pin meditation venmo
-      gochujang.
-    </p>
-    <p>
-      Next level selfies cronut ethical. Tofu tumblr you probably haven't heard
-      of them, man braid literally forage swag chillwave. Pug yr flannel
-      tumeric. Coloring book yr chillwave snackwave, shoreditch shaman gentrify
-      typewriter tumeric DIY copper mug small batch. Scenester waistcoat YOLO
-      hexagon kombucha poke 8-bit meditation. Selvage scenester forage
-      williamsburg. Hoodie fingerstache tacos mustache, hashtag quinoa next
-      level sartorial craft beer retro disrupt lo-fi.
-    </p>
-    <p>
-      YOLO twee keytar farm-to-table flexitarian cardigan polaroid lumbersexual
-      adaptogen drinking vinegar echo park dreamcatcher. Brunch shoreditch
-      dreamcatcher iPhone knausgaard plaid edison bulb letterpress ethical yr
-      fanny pack. Typewriter portland woke glossier cronut, post-ironic migas
-      gentrify letterpress cray brunch lyft 8-bit master cleanse. Pitchfork
-      thundercats organic pour-over unicorn lomo.
-    </p>
-    <p>
-      Ugh yr tacos aesthetic everyday carry, tumeric selvage cliche skateboard.
-      Wolf truffaut enamel pin vexillologist poutine. Hoodie roof party pabst,
-      cardigan letterpress af disrupt +1 subway tile chillwave live-edge
-      meggings next level readymade. Master cleanse gentrify hashtag, stumptown
-      fam single-origin coffee occupy dreamcatcher air plant viral vexillologist
-      enamel pin meggings. Tumblr chambray pickled microdosing austin scenester
-      green juice.
-    </p>
-    <p>
-      Austin four dollar toast church-key, vaporware hoodie edison bulb jean
-      shorts sustainable williamsburg plaid helvetica scenester lomo humblebrag.
-      Meditation tumblr kickstarter ennui williamsburg taiyaki pabst pour-over.
-      8-bit godard cred, chillwave enamel pin skateboard you probably haven't
-      heard of them. Meditation before they sold out single-origin coffee swag
-      try-hard jianbing slow-carb shaman leggings. Palo santo shabby chic
-      whatever man bun. Master cleanse wayfarers single-origin coffee pork belly
-      cronut, normcore cliche jianbing before they sold out tousled shabby chic
-      af pop-up gentrify. Direct trade la croix vexillologist jianbing,
-      flexitarian selvage try-hard stumptown polaroid shaman wayfarers poke
-      ramps food truck swag.
-    </p>
-    <p>
-      Pok pok lumbersexual wayfarers, direct trade leggings poutine truffaut
-      kitsch. Seitan aesthetic master cleanse squid coloring book banh mi YOLO
-      vegan locavore vexillologist readymade next level pop-up edison bulb.
-      Selvage knausgaard literally, quinoa photo booth 3 wolf moon microdosing
-      freegan yuccie. Truffaut gentrify lomo put a bird on it waistcoat. Ugh
-      austin distillery, tbh actually pork belly snackwave artisan mixtape
-      quinoa vexillologist pok pok polaroid listicle readymade.
-    </p>
-    <p>
-      Hammock letterpress prism dreamcatcher truffaut shabby chic vice
-      cold-pressed. Franzen pug fashion axe before they sold out, tumblr irony
-      kogi actually af bushwick banh mi. Snackwave bicycle rights tofu
-      dreamcatcher tote bag pour-over meditation raw denim fanny pack. Pop-up
-      retro taiyaki meditation twee gastropub VHS etsy. Semiotics gochujang
-      street art normcore, edison bulb farm-to-table pour-over taxidermy
-      brooklyn.
-    </p>
   </main>
+  <main id="Whatsapp" class="tabContent">
+    <h1>Comunidad en Whatsapp</h1>
+    <p>Link de whatsapp irá acá.</p>
+  </main>
+  <main id="Telegram" class="tabContent">
+    <h1>Grupo de telegram acá</h1>
+    <p>link del grupo acá</p>
+  </main>
+  <main  id="Discord" class="tabContent">
+    <h1>canal de discord acá</h1>
+    <p>invitación al servidor acá.</p>
+  </main>
+  <main id="Staff" class="tabContent">
+    <h1>Staff & Support</h1>
+    <p>Información del staff acá</p>
+  </main>
+  <script src="http://localhost:35729/livereload.js" charset="utf-8"></script>
 </body>
